@@ -29,6 +29,7 @@
       },
       "runtime" : {
          "requires" : {
+            "BioX::Seq" : "0",
             "Compress::BGZF" : "0",
             "Data::Lock" : "0",
             "File::ShareDir" : "1.00",
@@ -45,14 +46,13 @@
    "provides" : {
       "MS" : {
          "file" : "lib/MS.pm",
-         "version" : "0.008"
+         "version" : "0.008002"
       },
       "MS::CV" : {
          "file" : "lib/MS/CV.pm"
       },
       "MS::Mass" : {
-         "file" : "lib/MS/Mass.pm",
-         "version" : "0.001"
+         "file" : "lib/MS/Mass.pm"
       },
       "MS::PepInfo" : {
          "file" : "lib/MS/PepInfo.pm"
@@ -64,8 +64,7 @@
          "file" : "lib/MS/Protein.pm"
       },
       "MS::Reader" : {
-         "file" : "lib/MS/Reader.pm",
-         "version" : "0.203"
+         "file" : "lib/MS/Reader.pm"
       },
       "MS::Reader::ImzML" : {
          "file" : "lib/MS/Reader/ImzML.pm",
@@ -75,22 +74,19 @@
          "file" : "lib/MS/Reader/ImzML/Spectrum.pm"
       },
       "MS::Reader::MGF" : {
-         "file" : "lib/MS/Reader/MGF.pm",
-         "version" : "0.001"
+         "file" : "lib/MS/Reader/MGF.pm"
       },
       "MS::Reader::MGF::Spectrum" : {
          "file" : "lib/MS/Reader/MGF/Spectrum.pm"
       },
       "MS::Reader::MSn" : {
-         "file" : "lib/MS/Reader/MSn.pm",
-         "version" : "0.001"
+         "file" : "lib/MS/Reader/MSn.pm"
       },
       "MS::Reader::MSn::Spectrum" : {
          "file" : "lib/MS/Reader/MSn/Spectrum.pm"
       },
       "MS::Reader::MzIdentML" : {
-         "file" : "lib/MS/Reader/MzIdentML.pm",
-         "version" : "0.001"
+         "file" : "lib/MS/Reader/MzIdentML.pm"
       },
       "MS::Reader::MzIdentML::DBSequence" : {
          "file" : "lib/MS/Reader/MzIdentML/DBSequence.pm"
@@ -111,8 +107,7 @@
          "file" : "lib/MS/Reader/MzIdentML/SpectrumIdentificationResult.pm"
       },
       "MS::Reader::MzML" : {
-         "file" : "lib/MS/Reader/MzML.pm",
-         "version" : "0.006"
+         "file" : "lib/MS/Reader/MzML.pm"
       },
       "MS::Reader::MzML::Chromatogram" : {
          "file" : "lib/MS/Reader/MzML/Chromatogram.pm"
@@ -124,40 +119,34 @@
          "file" : "lib/MS/Reader/MzML/Spectrum.pm"
       },
       "MS::Reader::MzQuantML" : {
-         "file" : "lib/MS/Reader/MzQuantML.pm",
-         "version" : "0.001"
+         "file" : "lib/MS/Reader/MzQuantML.pm"
       },
       "MS::Reader::MzXML" : {
-         "file" : "lib/MS/Reader/MzXML.pm",
-         "version" : "0.005"
+         "file" : "lib/MS/Reader/MzXML.pm"
       },
       "MS::Reader::MzXML::Spectrum" : {
          "file" : "lib/MS/Reader/MzXML/Spectrum.pm"
       },
       "MS::Reader::PepXML" : {
-         "file" : "lib/MS/Reader/PepXML.pm",
-         "version" : "0.006"
+         "file" : "lib/MS/Reader/PepXML.pm"
       },
       "MS::Reader::PepXML::Result" : {
          "file" : "lib/MS/Reader/PepXML/Result.pm"
       },
       "MS::Reader::ProtXML" : {
-         "file" : "lib/MS/Reader/ProtXML.pm",
-         "version" : "0.003"
+         "file" : "lib/MS/Reader/ProtXML.pm"
       },
       "MS::Reader::ProtXML::Group" : {
          "file" : "lib/MS/Reader/ProtXML/Group.pm"
       },
       "MS::Reader::XML" : {
-         "file" : "lib/MS/Reader/XML.pm",
-         "version" : "0.001"
+         "file" : "lib/MS/Reader/XML.pm"
       },
       "MS::Reader::XML::CV" : {
          "file" : "lib/MS/Reader/XML/CV.pm"
       },
       "MS::Reader::XML::Record" : {
-         "file" : "lib/MS/Reader/XML/Record.pm",
-         "version" : "0.001"
+         "file" : "lib/MS/Reader/XML/Record.pm"
       },
       "MS::Reader::XML::Record::CV" : {
          "file" : "lib/MS/Reader/XML/Record/CV.pm"
@@ -181,5 +170,5 @@
          "url" : "https://github.com/jvolkening/p5-MS"
       }
    },
-   "version" : "0.008"
+   "version" : "0.008002"
 }
