@@ -9,6 +9,7 @@ use File::stat;
 use Storable qw/nstore_fd retrieve_fd/;
 use Scalar::Util qw/blessed/;
 use PerlIO::gzip;
+use MS; # because we need access to the package version
 
 use constant BGZF_MAGIC => pack 'H*', '1f8b0804';
 
@@ -22,7 +23,7 @@ sub new {
     $self->{__paranoid}  = $args{paranoid}  ? 1 : 0; # calc MD5 each time
     $self->{__fn}        = undef; # to allow dunlock even if not loaded
     $self->{__fh}        = undef; # to allow dunlock even if not loaded
-    $self->{__version}   = $VERSION;
+    $self->{__version}   = $MS::VERSION;
     $self->{__lock}      = $args{lock} // 0;
     $self->{__app_data}  = {};
 
@@ -101,7 +102,7 @@ sub load {
         open my $fhi, '<:gzip', $fn_idx or die "Error opening index: $!\n";
         my $existing = retrieve_fd($fhi);
         close $fhi;
-        if ($existing->{__version} < $VERSION) {
+        if ($existing->{__version} < $MS::VERSION) {
             croak "Index files were generated by an older version of "
             . blessed($self) . ". Not all versions are backwards compatible"
             . " - please remove the old indices and try again\n";
