@@ -191,6 +191,8 @@ sub n_spectra {
 
 }
 
+1;
+
 __END__
 
 =pod
