@@ -2,6 +2,7 @@ Revision history for MS
 
 0.008002 2019-09-20
         Fix inconsistent versioning between modules
+        Fix missing return value in MS::Reader::MzXML
 
 0.008001 2019-09-20
         Fixed missing List::MoreUtils dependency in Build.PL
